// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstrumentDiagram 96-channel GEN1 renders correctly 1`] = `
.c0 {
  min-width: 0;
}

<div
  className="c0"
>
  <img
    className=""
    src="ninety-six-channel-gen1.png"
  />
</div>
`;

exports[`InstrumentDiagram Multi-channel GEN2 renders correctly 1`] = `
.c0 {
  min-width: 0;
}

<div
  className="c0"
>
  <img
    className="flipped_image"
    src="multi-channel_GEN2_800px.png"
  />
</div>
`;

exports[`InstrumentDiagram Multi-channel renders correctly 1`] = `
.c0 {
  min-width: 0;
}

<div
  className="c0"
>
  <img
    className=""
    src="multi-channel_GEN1_800px.png"
  />
</div>
`;

exports[`InstrumentDiagram Single-channel GEN2 renders correctly 1`] = `
.c0 {
  min-width: 0;
}

<div
  className="c0"
>
  <img
    className="flipped_image"
    src="single-channel_GEN2_800px.png"
  />
</div>
`;

exports[`InstrumentDiagram Single-channel renders correctly 1`] = `
.c0 {
  min-width: 0;
}

<div
  className="c0"
>
  <img
    className=""
    src="single_channel_GEN1_800px.png"
  />
</div>
`;

exports[`InstrumentDiagram eight-channel GEN3 renders correctly 1`] = `
.c0 {
  min-width: 0;
}

<div
  className="c0"
>
  <img
    className="flipped_image"
    src="eight-channel-gen3.png"
  />
</div>
`;

exports[`InstrumentDiagram single-channel GEN3 renders correctly 1`] = `
.c0 {
  min-width: 0;
}

<div
  className="c0"
>
  <img
    className="flipped_image"
    src="single-channel-gen3.png"
  />
</div>
`;

exports[`InstrumentGroup Renders correctly 1`] = `
.c0 {
  min-width: 0;
}

<section
  className="pipette_group"
>
  <div
    className="pipette left foo"
  >
    <div
      className="pipette_info"
    >
      <div>
        <h2
          className="title"
        >
          pipette
        </h2>
        <span
          className="value"
        >
          p300 8-Channel
        </span>
      </div>
    </div>
    <div
      className="c0 pipette_icon"
    >
      <img
        className=""
        src="multi-channel_GEN1_800px.png"
      />
    </div>
  </div>
  <div
    className="pipette right disabled blah"
  >
    <div
      className="pipette_info"
    >
      <div>
        <h2
          className="title"
        >
          pipette
        </h2>
        <span
          className="value"
        >
          p10 Single
        </span>
      </div>
    </div>
    <div
      className="c0 pipette_icon"
    >
      <img
        className="flipped_image"
        src="single_channel_GEN1_800px.png"
      />
    </div>
  </div>
</section>
`;
